--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# ignore everything
 *
+# do not ignore files with extensions
 !*.*
+# do not ignore directories
 !*/
+
+# ignore emacs autosave files (#filename#)
+\#*\#
